# ldct-benchmark

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_PYPI.md  argparser.py  denoising-example.py  download_data.py  mkdocs.yml  pyproject.toml  test.py  train.py  versions.json
.github/: pull_request_template.md
.github/workflows/: build_dev_docs.yml  build_release_docs.yml  bump_version.yml  close_inactive.yml  development.yml  pull_request.yml  release.yml  test_release.yml  verify_test.yml  version_manager.py
assets/: manifest.tcia
configs/: bilateral.yaml  cnn10-hpopt.yaml  cnn10.yaml  dugan.yaml  qae.yaml  redcnn.yaml  resnet.yaml  transct.yaml  wganvgg.yaml
dev/: 404.html  gen_ref_pages.py  index.html  objects.inv
dev/denoising_algorithms/: index.html
dev/examples/denoise_dicoms/: index.html
dev/examples/hyperparameter_optimization/: index.html
dev/examples/ldct_iqa/: index.html
dev/examples/test_models/: index.html
dev/examples/train_custom_model/: index.html
dev/getting_started/: index.html
dev/model_hub/: index.html
dev/reference/ldctbench/data/LDCTMayo/: index.html
dev/reference/ldctbench/data/prepare_dataset/: index.html
dev/reference/ldctbench/evaluate/ldct_iqa/: index.html
dev/reference/ldctbench/evaluate/utils/: index.html
dev/reference/ldctbench/hub/load_model/: index.html
dev/reference/ldctbench/hub/methods/: index.html
dev/reference/ldctbench/hub/utils/: index.html
dev/reference/ldctbench/methods/base/: index.html
dev/reference/ldctbench/scripts/hpopt/: index.html
dev/reference/ldctbench/utils/argparser/: index.html
dev/reference/ldctbench/utils/auxiliaries/: index.html
dev/reference/ldctbench/utils/metrics/: index.html
dev/reference/ldctbench/utils/test_utils/: index.html
dev/reference/ldctbench/utils/training_utils/: index.html
dev/search/: search_index.json
docs/: denoising_algorithms.md  getting_started.md  index.md  model_hub.md
docs/examples/: denoise_dicoms.md  hyperparameter_optimization.md  ldct_iqa.md  test_models.md  train_custom_model.md
ldctbench/data/: LDCTMayo.py  __init__.py  info.yml  prepare_dataset.py
ldctbench/evaluate/: __init__.py  ldct_iqa.py  utils.py
ldctbench/hub/: __init__.py  checkpoints.json  load_model.py  methods.py  utils.py
ldctbench/methods/: base.py
ldctbench/methods/bilateral/: Trainer.py  argparser.py  network.py
ldctbench/methods/cnn10/: Trainer.py  network.py
ldctbench/methods/dugan/: Trainer.py  argparser.py  network.py  utils.py
ldctbench/methods/qae/: Trainer.py  network.py
ldctbench/methods/redcnn/: Trainer.py  argparser.py  network.py
ldctbench/methods/resnet/: Trainer.py  network.py
ldctbench/methods/transct/: Trainer.py  network.py
ldctbench/methods/wganvgg/: Trainer.py  argparser.py  network.py
ldctbench/scripts/: download_data.py  hpopt.py  test.py  train.py
ldctbench/utils/: __init__.py  auxiliaries.py  metrics.py  test_utils.py  training_utils.py
tests/: conftest.py  test_hub_load_model.py  test_hub_utils.py  test_inference.py  test_ldct_iqa.py  test_methods.py  test_scripts.py  test_utils_auxiliaries.py
tests/ldct_iqa/: COPYRIGHT.md  scores.json  test007.tiff  test011.tiff  test012.tiff  test014.tiff  test016.tiff  test020.tiff
v0.0.15/: 404.html
v0.0.15/denoising_algorithms/: index.html
v0.0.15/examples/denoise_dicoms/: index.html
v0.0.15/examples/test_models/: index.html
v0.0.15/examples/train_custom_model/: index.html
v0.0.5/: 404.html  gen_ref_pages.py  index.html  objects.inv
v0.0.5/examples/denoise_dicoms/: index.html
v0.0.5/examples/test_models/: index.html
v0.0.5/getting_started/: index.html
v0.0.7/: index.html
v0.0.7/denoising_algorithms/: index.html
v0.0.7/examples/test_models/: index.html
v0.0.7/examples/train_custom_model/: index.html
v0.0.7/model_hub/: index.html
(+83 files in other folders)
